<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar_2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <ImageView
            android:id="@+id/img_profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_round" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_black"
            android:text="@string/Name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Email"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/l_privacy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="@dimen/button_v_padding">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/privacy"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_roomHistory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="@dimen/button_v_padding">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/history_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rooms_history"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_helpSupport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="@dimen/button_v_padding">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/help_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/help_support"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_Logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"

            android:paddingVertical="@dimen/button_v_padding">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logout_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/logout"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/footer2" />


</androidx.constraintlayout.widget.ConstraintLayout>